ajout de la nuance de bleu au survol

--- a/css/clean.css
+++ b/css/clean.css
@@ -3,6 +3,7 @@
     --blue-nds : rgb(79, 179, 246);
     --green-nds : #53CF92;
     --yellow-nds : #ffc400;
+    --blue-hover-nds: #1091e7;
 }
 
 /* Interface du haut */
