--- a/css/clean.css
+++ b/css/clean.css
@@ -816,4 +816,31 @@ input:checked + .switch::before {
 input:checked + .switch:active::before {
     box-shadow: 0 2px 8px rgba(0,0,0,0.28), 0 0 0 20px rgba(0,150,136,0.2) !important;
 }
+
+/* Theme button */
+#theme-button-panel {
+    margin-bottom: 3px;
+    border-radius: 16px;
+    padding: 5px;
+    font-size: 12px;
+    background-color: white;
+    border: 2px solid #282828;
+    color: black;
+}
+#theme-button-div {
+    position: fixed;
+    right: 10px;
+    top: 40rem;
+    z-index: 100;
+}
+#content-div {
+    padding: 10px;
+    background-color: white;
+    color: black;
+    border: 2px solid #282828;
+    border-radius: 8px;
+    transform: translateX(0px);
+    transition: 200ms;
+}
+
 /* ------------------------------------------------------------------------ */
