--- a/css/dark.css
+++ b/css/dark.css
@@ -612,7 +612,7 @@ div[style="background-color: rgb(238, 170, 170);"] {
     content: url('https://raw.githubusercontent.com/sugiiiiii/nds-moderaton-ui-ext/main/images/host/search-dark.svg') !important;
 }
 
-<<<<<<< Updated upstream
+
 /* ------------------------------------------------------ */
 /*                Right side theme button                 */
 /* ------------------------------------------------------ */
@@ -626,16 +626,19 @@ div[style="background-color: rgb(238, 170, 170);"] {
     background-color: black;
     color: var(--dark-global-text-color);
 }
-=======
 
 /* ------------------------------------------------------ */
 /*                     Page de devoir                     */
 /* ------------------------------------------------------ */
 
 /* Section commentaire */
-.Comments-module__comments--3qGAy {border-top: none;}
-.sg-textarea {color: white;background: var(--dark-light-color);
-    border: var(--dark-light-color);}
+.Comments-module__comments--3qGAy {
+    border-top: none !important;
+}
+.sg-textarea {
+    color: white;background: var(--dark-light-color);
+    border: var(--dark-light-color);
+}
 .sg-textarea:hover {
     background-color: var(--dark-back-color);
     border: 2px solid var(--dark-light-color);
@@ -706,7 +709,7 @@ div[data-testid="question_box_header_side_expert_verified"] div {
 }
 
 /* Réponse vérifié par expert */
-div[data-testid="answer_box_header"] {
+.AnswerBoxLayout-module__boxExpertVerified--Ljdgc div[data-testid="answer_box_header"] {
     background-color: var(--green-nds);
     border-radius:5px;
 }
@@ -734,4 +737,3 @@ div[data-testid="looking_for_more_banner"] {
     display: none;
 }
   
->>>>>>> Stashed changes
